--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 #Thu Mar 17 23:46:40 CST 2016
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 javadoc.splitindex=true
@@ -6,13 +7,12 @@ build.classes.excludes=**/*.java,**/*.form
 javadoc.author=false
 j2ee.platform=1.6-web
 dist.war=${dist.dir}/${war.name}
-javac.target=1.6
+javac.target=1.7
 build.generated.dir=${build.dir}/generated
 resource.dir=setup
 build.web.excludes=${build.classes.excludes}
 war.ear.name=${war.name}
 j2ee.compile.on.save=true
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar\:${j2ee.server.home}/lib/catalina-ant.jar\:${j2ee.server.home}/lib/catalina-ha.jar\:${j2ee.server.home}/lib/catalina-storeconfig.jar\:${j2ee.server.home}/lib/catalina-tribes.jar\:${j2ee.server.home}/lib/catalina.jar\:${j2ee.server.home}/lib/ecj-4.4.2.jar\:${j2ee.server.home}/lib/el-api.jar\:${j2ee.server.home}/lib/jasper-el.jar\:${j2ee.server.home}/lib/jasper.jar\:${j2ee.server.home}/lib/jsp-api.jar\:${j2ee.server.home}/lib/servlet-api.jar\:${j2ee.server.home}/lib/tomcat-api.jar\:${j2ee.server.home}/lib/tomcat-coyote.jar\:${j2ee.server.home}/lib/tomcat-dbcp.jar\:${j2ee.server.home}/lib/tomcat-i18n-es.jar\:${j2ee.server.home}/lib/tomcat-i18n-fr.jar\:${j2ee.server.home}/lib/tomcat-i18n-ja.jar\:${j2ee.server.home}/lib/tomcat-jdbc.jar\:${j2ee.server.home}/lib/tomcat-jni.jar\:${j2ee.server.home}/lib/tomcat-util-scan.jar\:${j2ee.server.home}/lib/tomcat-util.jar\:${j2ee.server.home}/lib/tomcat-websocket.jar\:${j2ee.server.home}/lib/websocket-api.jar
 debug.test.classpath=${run.test.classpath}
 build.dir=build
 javac.deprecation=false
@@ -31,10 +31,12 @@ javadoc.version=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 dist.dir=dist
 file.reference.poi-excelant-3.14-20160307.jar=F\:\\Develop\\Java\\Soft\\libs\\poi-3.14\\poi-excelant-3.14-20160307.jar
-javac.source=1.6
+javac.source=1.7
 javac.debug=true
 javac.test.processorpath=${javac.test.classpath}
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
 javadoc.notree=false
@@ -49,7 +51,22 @@ war.content.additional=
 dist.javadoc.dir=${dist.dir}/javadoc
 client.urlPart=
 javadoc.additionalparam=
-javac.classpath=${file.reference.commons-net-3.4.jar}\:${file.reference.poi-3.14-20160307.jar}\:${file.reference.poi-examples-3.14-20160307.jar}\:${file.reference.poi-excelant-3.14-20160307.jar}\:${file.reference.poi-ooxml-3.14-20160307.jar}\:${file.reference.poi-ooxml-schemas-3.14-20160307.jar}\:${file.reference.poi-scratchpad-3.14-20160307.jar}\:${file.reference.dom4j-1.6.1.jar}\:${file.reference.jspsmartupload.jar}\:${file.reference.mysql-connector-java-5.1.26-bin.jar}\:${file.reference.stax-api-1.0.1.jar}\:${libs.jstl.classpath}\:${file.reference.xmlbeans-2.6.0.jar}\:${file.reference.jaxen-1.1-beta-6.jar}\:${file.reference.mail.jar}
+javac.classpath=\
+    ${file.reference.commons-net-3.4.jar}:\
+    ${file.reference.poi-3.14-20160307.jar}:\
+    ${file.reference.poi-examples-3.14-20160307.jar}:\
+    ${file.reference.poi-excelant-3.14-20160307.jar}:\
+    ${file.reference.poi-ooxml-3.14-20160307.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.14-20160307.jar}:\
+    ${file.reference.poi-scratchpad-3.14-20160307.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.jspsmartupload.jar}:\
+    ${file.reference.mysql-connector-java-5.1.26-bin.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}:\
+    ${libs.jstl.classpath}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.jaxen-1.1-beta-6.jar}:\
+    ${file.reference.mail.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
@@ -71,10 +88,12 @@ conf.dir=${source.root}/conf
 annotation.processing.run.all.processors=true
 compile.jsps=false
 excludes=
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 display.browser=true
-endorsed.classpath=${libs.javaee-endorsed-api-6.0.classpath}
+endorsed.classpath=\
+    ${libs.javaee-endorsed-api-6.0.classpath}
 javadoc.use=true
 build.web.dir=${build.dir}/web
 javadoc.nonavbar=false
