--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -136,6 +136,10 @@
         <servlet-name>Logout</servlet-name>
         <servlet-class>com.coastshop.web.Logout</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ShopinSAPByDateServlet</servlet-name>
+        <servlet-class>com.coastshop.web.ShopinSAPByDateServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login.do</url-pattern>
@@ -215,6 +219,10 @@
     <servlet-mapping>
         <servlet-name>Logout</servlet-name>
         <url-pattern>/logout.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ShopinSAPByDateServlet</servlet-name>
+        <url-pattern>/shopinsapbydate.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
