--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,8 @@
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+file.reference.commons-fileupload-1.3.1.jar=F:\\Develop\\Maven\\repository\\commons-fileupload\\commons-fileupload\\1.3.1\\commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.2.jar=F:\\Develop\\Maven\\repository\\commons-io\\commons-io\\2.2\\commons-io-2.2.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.5.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+javadoc.reference.commons-fileupload-1.3.1.jar=F:\\Develop\\Maven\\repository\\commons-fileupload\\commons-fileupload\\1.3.1\\commons-fileupload-1.3.1-javadoc.jar
+javadoc.reference.poi-3.14-20160307.jar=F:\\Develop\\Maven\\repository\\org\\apache\\poi\\poi\\3.14\\poi-3.14-javadoc.jar
 #Thu Mar 17 23:46:40 CST 2016
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 javadoc.splitindex=true
@@ -11,12 +15,13 @@ javac.target=1.7
 build.generated.dir=${build.dir}/generated
 resource.dir=setup
 build.web.excludes=${build.classes.excludes}
+source.reference.commons-fileupload-1.3.1.jar=F:\\Develop\\Maven\\repository\\commons-fileupload\\commons-fileupload\\1.3.1\\commons-fileupload-1.3.1-sources.jar
 war.ear.name=${war.name}
 j2ee.compile.on.save=true
 debug.test.classpath=${run.test.classpath}
 build.dir=build
 javac.deprecation=false
-file.reference.poi-ooxml-schemas-3.14-20160307.jar=F\:\\Develop\\Java\\Soft\\libs\\poi-3.14\\poi-ooxml-schemas-3.14-20160307.jar
+file.reference.poi-ooxml-schemas-3.14-20160307.jar=../../Java/Soft/libs/poi-3.14/poi-ooxml-schemas-3.14-20160307.jar
 persistence.xml.dir=${conf.dir}
 j2ee.copy.static.files.on.save=true
 auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less\:/css
@@ -30,7 +35,7 @@ annotation.processing.processors.list=
 javadoc.version=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 dist.dir=dist
-file.reference.poi-excelant-3.14-20160307.jar=F\:\\Develop\\Java\\Soft\\libs\\poi-3.14\\poi-excelant-3.14-20160307.jar
+file.reference.poi-excelant-3.14-20160307.jar=../../Java/Soft/libs/poi-3.14/poi-excelant-3.14-20160307.jar
 javac.source=1.7
 javac.debug=true
 javac.test.processorpath=${javac.test.classpath}
@@ -44,7 +49,7 @@ source.root=src
 runmain.jvmargs=-Xmx1280m
 platform.active=default_platform
 javadoc.preview=true
-file.reference.poi-scratchpad-3.14-20160307.jar=F\:\\Develop\\Java\\Soft\\libs\\poi-3.14\\poi-scratchpad-3.14-20160307.jar
+file.reference.poi-scratchpad-3.14-20160307.jar=../../Java/Soft/libs/poi-3.14/poi-scratchpad-3.14-20160307.jar
 j2ee.deploy.on.save=true
 annotation.processing.enabled=true
 war.content.additional=
@@ -66,11 +71,13 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
     ${file.reference.jaxen-1.1-beta-6.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.2.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
-file.reference.xmlbeans-2.6.0.jar=F\:\\Develop\\Java\\Soft\\libs\\poi-3.14\\ooxml-lib\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar=../../Java/Soft/libs/poi-3.14/ooxml-lib/xmlbeans-2.6.0.jar
 no.dependencies=true
 javadoc.private=false
 javadoc.encoding=${source.encoding}
@@ -79,7 +86,7 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
 web.docbase.dir=web
 javac.compilerargs=
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js
-file.reference.poi-ooxml-3.14-20160307.jar=F\:\\Develop\\Java\\Soft\\libs\\poi-3.14\\poi-ooxml-3.14-20160307.jar
+file.reference.poi-ooxml-3.14-20160307.jar=../../Java/Soft/libs/poi-3.14/poi-ooxml-3.14-20160307.jar
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 source.encoding=UTF-8
 dist.ear.war=${dist.dir}/${war.ear.name}
@@ -98,15 +105,15 @@ javadoc.use=true
 build.web.dir=${build.dir}/web
 javadoc.nonavbar=false
 war.name=coastshoppd.war
-file.reference.commons-net-3.4.jar=F\:\\Develop\\Java\\Soft\\libs\\commons-net-3.4\\commons-net-3.4.jar
+file.reference.commons-net-3.4.jar=../../Java/Soft/libs/commons-net-3.4/commons-net-3.4.jar
 javadoc.windowtitle=
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
-file.reference.poi-examples-3.14-20160307.jar=F\:\\Develop\\Java\\Soft\\libs\\poi-3.14\\poi-examples-3.14-20160307.jar
+file.reference.poi-examples-3.14-20160307.jar=../../Java/Soft/libs/poi-3.14/poi-examples-3.14-20160307.jar
 src.dir=${source.root}/java
-file.reference.poi-3.14-20160307.jar=F\:\\Develop\\Java\\Soft\\libs\\poi-3.14\\poi-3.14-20160307.jar
+file.reference.poi-3.14-20160307.jar=../../Java/Soft/libs/poi-3.14/poi-3.14-20160307.jar
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 debug.classpath=${build.classes.dir}\:${javac.classpath}
